# mariposa

./: #id.smt2#  .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Mariposa.psess  Mariposa.sln  README.md  build.py  configs.json  copy_files_from_s1904.py  find_empty_folders.py  fix_project.sh  get_proofs.job  get_proofs.py  idfs.smt2  orig.smt2  requirements.txt  shook.smt2  shookfs.smt2  test.sh  unsat-core-figures.tex
Mariposa/: #TreeShaking.fs#  .#TreeShaking.fs  AssemblyInfo.fs  Mariposa.fsproj  Perturb.fs  Program.fs  TreeShaking.fs  Util.fs
SMTLib/: AssemblyInfo.fs  Parse.fs  PrettyPrint.fs  SMTLib.fs  SMTLib.fsproj  SMTLibLexer.fs  SMTLibLexer.fss  SMTLibParser.fs  SMTLibParser.fsi  SMTLibParser.fsp  packages.config
SMTLint/: AssemblyInfo.fs  Program.fs  SMTLint.fsproj
config/: analyzers.json  expers.json  solvers.json
configs/: analyzers.json  dummy_cfg.json  experiments.json  main_cfg.json  projects.json  single_cfg.json  solvers.json
data/: bisect_tasks_all  xab  (+6 more)
src/smt2action/smt-log-parser/: .gitattributes  .gitignore  Cargo.toml  README.md  settings.json  settings.txt
src/smt2action/smt-log-parser/design-docs/: Axiom Profiler Z3 logging.md  architecture.md  features.md  items.md  mk-proof.md  parser.md  rust_misc.md
src/smt2action/smt-log-parser/src/: display_with.rs  error.rs  items.rs  lib.rs  main.rs
src/smt2action/smt-log-parser/src/parsers/: mod.rs
src/smt2action/smt-log-parser/src/parsers/z3/: egraph.rs  inst.rs  inst_graph.rs  mod.rs  stack.rs  terms.rs  z3parser.rs
src/smt2action/smt-log-parser/tests/: parse_logs.rs
(+966 files in other folders)
