[package]
name = "smt-log-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
serde = { version = "1.0.183", features = ["derive"] }
petgraph = "0.6.4"
wasm-timer = "0.2"
semver = "1.0"
typed-index-collections = { version = "3.1", features = ["serde"] }
fxhash = "0.2"
duplicate = "1.0"
gloo-console = "0.3.0"
roaring = "0.10"
lasso = { version = "0.7", features = ["serialize"] }

[dev-dependencies]
memory-stats = "1.1.0"
cap = "0.1.2"
